# Podcast_Recommender

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  collaborative.py  config.yaml  docker-compose.yml  dvc.yaml  loader.py  mlflow.db  pyproject.toml  ranker.py  requirements.txt  test_pipeline.py
.github/workflows/: ml_pipeline.yml
configs/: config.yaml
data/processed/: interactions.parquet  podcasts.parquet
data/raw/: rss_metadata.json  seed_feeds.txt
metrics/: rss_scrape_summary.json
models/pipeline/: cf_model.pkl  ranker.pkl
models/pipeline/embedder/: embeddings.npy  faiss.index  podcast_ids.pkl  podcasts.parquet
models/pipeline_v2/: cf_model.pkl  ranker.pkl
models/pipeline_v2/embedder/: podcasts.parquet
reports/sim/: drift_summary_fallback.json
src/: config.py
src/api/: main.py
src/data/: extract_kaggle.py  extract_rss.py  loader.py  normalize.py  rss_discovery.py  rss_scraper.py
src/models/: collaborative.py  embedder.py  ranker.py  recommender.py
src/monitoring/: monitor.py
src/ui/: app.py
tests/: conftest.py  test_pipeline.py  test_rss_pipeline.py
